[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "This is the solution for CI/CD lab"
authors = ["Ahmed Ibrahim"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = ">=2.11.9,<3.0.0"
pendulum = ">=3.1.0,<4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
